maint: update dependencies

--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
         "serve": "esbuild --format=esm --bundle --loader:.png=dataurl --outdir=example/dist/ src/lifemap.js --watch --servedir=example"
     },
     "dependencies": {
-        "@deck.gl/aggregation-layers": "^8.9.32",
-        "@deck.gl/core": "^8.8.0",
-        "@deck.gl/extensions": "^8.9.32",
-        "@deck.gl/layers": "^8.8.0",
+        "@deck.gl/aggregation-layers": "^8.9.33",
+        "@deck.gl/extensions": "^8.9.33",
+        "@deck.gl/layers": "^8.9.33",
         "@observablehq/plot": "^0.6.12",
-        "arquero": "^5.3.0",
+        "@apache-arrow/es2015-esm": "^14.0.2",
         "d3": "^7.8.5",
         "deck.gl-leaflet": "^1.2.1",
         "leaflet": "^1.9.4"
