--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@deck.gl/layers": "^8.9.33",
         "@observablehq/plot": "^0.6.12",
         "d3": "^7.8.5",
-        "ol": "^9.0.0"
+        "ol": "^9.0.0",
+        "fetch-jsonp": "^1.3.0"
     },
     "devDependencies": {
         "esbuild": "^0.17.19"
