--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     },
     "dependencies": {
         "@apache-arrow/es2015-esm": "^15.0.0",
-        "@deck.gl/aggregation-layers": "^8.9.33",
-        "@deck.gl/extensions": "^8.9.33",
-        "@deck.gl/layers": "^8.9.33",
-        "@observablehq/plot": "^0.6.12",
-        "d3": "^7.8.5",
-        "ol": "^9.0.0",
-        "fetch-jsonp": "^1.3.0"
+        "@deck.gl/aggregation-layers": "^9.0.1",
+        "@deck.gl/extensions": "^9.0.1",
+        "@deck.gl/layers": "^9.0.1",
+        "@observablehq/plot": "^0.6.14",
+        "d3": "^7.9.0",
+        "ol": "^9.1.0",
+        "fetch-jsonp": "^1.3.0",
+        "leaflet": "^1.9.4"
     },
     "devDependencies": {
         "esbuild": "^0.17.19"
